--- a/html/tablo.html
+++ b/html/tablo.html
@@ -6,6 +6,9 @@
 <b> Nufus Dagilimi</b>
 <table border=10 width=500 cellpadding=5 cellspacing=7>
 	<tr>
+		<th colspan=4>Largest Population </th>	   <!--4 sütunu birleştirir.-->
+	</tr>
+	<tr>
 		<td><b>Rank </b></td>
 		<td><b>City Name</b> </td>
 		<th> State </th>                     <!--kalın ve ortalı-->
