--- a/javascript/parametre.html
+++ b/javascript/parametre.html
@@ -3,14 +3,14 @@
 </head>
 <body>
 <script type="text/javascript">
-	/*function yas(x) {
+	function yas(x) {
 	document.write ("Merhaba benim yasim:"+x+"<br/>");}
-	yas(30);
-	yas(24);
-	*/
+	
+	
 	
 	function kimlik(ad,soyad){
-	document.write("Adim soyadim:<b>"+ad+" "+soyad+"</b><br/>");}
+	document.write("Adim soyadim:<b>"+ad+" "+soyad+"</b><br/>");
+		yas(24);}
 	kimlik("Mesut","GUN");
 	kimlik("Gokce","GUNES");
 	
