--- a/Angularjs/index.html
+++ b/Angularjs/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <title>Döküman</title>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.0.7/angular.min.js"></script>
-    <script src="reSearch.js"></script>
-    <link href="reS.css" rel="stylesheet">
+    <script src="anglrList.js"></script>
+    <link href="list.css" rel="stylesheet">
   </head>
   <body>
     <center><h1>Yapılacaklar Listesi</h1></center>
